# onyx-i62hd-sdl

./: CMakeLists.txt  README.md  build.sh
cmake_modules/: arm_toolchain.cmake  mymacro.cmake
src/: .testvidinfo.c.swp  CMakeLists.txt  test-sdl.c  testvidinfo.c
